--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ python:
   - 2.7
 install: true
 script: python fizzbuzz/test.py
+deploy:
+  provider: bintray
+  file: "fizzbuzz/bintray"
+  user: "pekashy"
+  key: "08d99a739d9957629ce84c66c256d3f55033b180"
+  skip_cleanup: true # to upload artifacts created during the build
